--- a/views/expertRegistration/errorMessage.jade
+++ b/views/expertRegistration/errorMessage.jade
@@ -1,4 +1,5 @@
-if (messages.info)
-    .alert-info.alert #{messages.info[0]}
-if (messages.error)
-    .alert-eror.alert #{messages.error[0]}
+.row-fluid
+    if (messages.info)
+        .alert-info.alert #{messages.info[0]}
+    if (messages.error)
+        .alert-danger.alert #{messages.error[0]}
