--- a/views/expertRegistration/header.jade
+++ b/views/expertRegistration/header.jade
@@ -1,6 +1,8 @@
 .container-fluid
     .row-fluid
-        .span2
-        .span8
-            h3 Expert Registration - #{integration.title}
-        .span2
+        .col-md-2
+        .col-md-8
+            h3
+                | #{integration.title}
+                small &nbsp;Expert Registration
+        .col-md-2
