--- a/views/callFlow/header.jade
+++ b/views/callFlow/header.jade
@@ -1,11 +1,11 @@
 .container-fluid
     .row-fluid
-        .span2
-        .span8
-            .span2
+        .col-md-2
+        .col-md-8
+            .col-md-2
                 img.img-polaroid(src='http://www.geovic.net/userfiles/image/Blank%20Profile(1).png', width=100, height=100)
             .left
                 h3 #{user.first_name}&nbsp;#{user.last_name}
                 label #{user.short_desc}
-        .span2
+        .col-md-2
 hr
