--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -1,10 +1,13 @@
 doctype 5
-.container-fluid
-.row-fluid
-    .span2
-    .span8
-        .pull-right
-            if (logged_in_user)
-                | Welcome, #{logged_in_user.first_name} |&nbsp;
-                a(href='/expert/' + logged_in_user.id + '/profile') Edit profile
-    .span2
+.container
+    .row
+        .col-md-2
+        .col-md-8
+            .row-fluid
+                .col-md-6
+                    h3 SearchNTalk Dashboard
+                .pull-right
+                    if (logged_in_user)
+                        | Welcome, #{logged_in_user.first_name}
+        .col-md-2
+hr
