--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -1,16 +1,14 @@
 title User Management - #{integration.title}
 include header
 include scriptsAndStyles
-.container-fluid
-    .row-fluid
-        .span2
-        .span8
-            .row-fluid
-                .span9
-                    h3
-                        | #{integration.title}&nbsp;
-                        small members
-                .span3
+.container
+    .row
+        .col-md-2
+        .col-md-8
+            .row
+                .col-md-9
+                    h4 User Management
+                .col-md-3
                     .pull-right
                         .btn-primary.btn.save(data-toggle='modal', href='#inviteUserModal')
                             i.icon-plus.icon-white
@@ -20,9 +18,9 @@ include scriptsAndStyles
                     tr
                         th First Name
                         th Last Name
-                        th.span3 Revenue Share
-                        th.span2 Role
-                        th.span1 Actions
+                        th.col-md-3 Revenue Share
+                        th.col-md-2 Role
+                        th.col-md-1 Actions
                 tbody
                 each member in integrationMembers
                     each user in member.user
@@ -36,7 +34,7 @@ include scriptsAndStyles
                                     a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=member.user_id == logged_in_user.id ? '/expert/' + member.id + '/profile' : '#editUserModal')
                                     | &nbsp;
                                     a.remove.fa.fa-times-circle(data-id=member.id, data-toggle='modal', href='#delUserModal', style="color: red")
-        .span2
+        .col-md-2
 
 #inviteUserModal.modal.fade(style='display: none;')
     .modal-dialog
