--- a/views/dashboard/integrations.jade
+++ b/views/dashboard/integrations.jade
@@ -3,17 +3,17 @@ include header
 
 .container-fluid
     .row-fluid
-        .span2
-        .span8
+        .col-md-2
+        .col-md-8
             h3 Integrations
             table.table-bordered.table-striped.table#users
                 thead
                     tr
                         th First Name
                         th Last Name
-                        th.span3 Revenue Share
-                        th.span2 Role
-                        th.span1 Actions
+                        th.col-md-3 Revenue Share
+                        th.col-md-2 Role
+                        th.col-md-1 Actions
                 tbody
                 each member in integrations
                     tr(data-id=member.id, class=(member.deleted != null ? 'danger' : ''))
@@ -25,4 +25,4 @@ include header
                             a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=member.user_id == logged_in_user.id ? '/expert/' + member.id + '/profile' : '#editUserModal')
                             | &nbsp;
                             a.remove.fa.fa-times-circle(data-id=member.id, data-toggle='modal', href='#delUserModal', style="color: red")
-        .span2
+        .col-md-2
