--- a/views/expertRegistration/authenticate.jade
+++ b/views/expertRegistration/authenticate.jade
@@ -3,53 +3,43 @@ include scriptsAndStyles
 include header
 .container-fluid
     .row-fluid
-        .span2
-        .span8
+        .col-md-2
+        .col-md-8
             include errorMessage
-            label Please login to searchntalk.com or create an account to continue..
-            .span4
-                form.form-horizontal(action='/expert/login', method='POST')
-                    .control-group
-                        .control-label
-                            | Email
-                        .controls
-                            input(name='username', type='text')
-                    .control-group
-                        .control-label
-                            | Password
-                        .controls
-                            input(name='password', type='password')
-                    .control-group
+            .col-md-4(style='display: none;')
+                form#login-form(role='form', action='/expert/login', method='POST')
+                    .form-group
+                        label(for='username') Email
+                        input.form-control#username(name='username', type='text', data-toggle="tooltip", data-placement="bottom", value=user.email)
+                    .form-group
+                        label(for='login_password') Password
+                        input.form-control#login_password(name='password', type='password', data-toggle="tooltip", data-placement="bottom")
+                    .form-group
                         .controls
                             input.btn-primary.btn(value='Login', type='submit')
-                form.form-horizontal(action='/expert/login/linkedin')
-                    .control-group
-                        .controls
-                            input.btn-primary.btn(value='Login with LinkedIn', type='submit')
-            .span4
-                form.form-horizontal(action='/expert/register', method='POST')
-                    .control-group
-                        .control-label(for='#email')
-                            | Email
-                        .controls
-                            input#email(name='email', type='text')
-                    .control-group
-                        .control-label
-                            | First Name
-                        .controls
-                            input(name='first_name', type='text')
-                    .control-group
-                        .control-label
-                            | Last Name
-                        .controls
-                            input(name='last_name', type='text')
-                    .control-group
-                        .control-label
-                            | Password
-                        .controls
-                            input(type='password', name='password', type='text')
-                    .control-group
-                        .controls
-                            input.btn-primary.btn(value='Register', type='submit')
-    .span2
-script(src='/javascripts/app/expertRegistation.js')
+                            .btn.btn-link#registrationLink Create an account
+                form(role='form', action='/expert/login/linkedin')
+                    .form-group
+                        input.btn-primary.btn(value='Login with LinkedIn', type='submit')
+            .col-md-4
+                form#registration-form(action='/expert/register', method='POST')
+                    .form-group
+                        label(for='email') Email
+                        input.form-control#email(name='email', type='text', data-toggle="tooltip", data-placement="bottom", value=user.email)
+                    .form-group
+                        label(for='first_name') First Name
+                        input.form-control#first_name(name='first_name', type='text', data-toggle="tooltip", data-placement="bottom", value=user.first_name)
+                    .form-group
+                        label(for='last_name') Last Name
+                        input.form-control#last_name(name='last_name', type='text', data-toggle="tooltip", data-placement="bottom", value=user.last_name)
+                    .form-group
+                        label(for='password') Password
+                        input.form-control#password(type='password', name='password', data-toggle="tooltip", data-placement="bottom")
+                    .form-group
+                        label(for='confirm_password') Confirm Password
+                        input.form-control#confirm_password(type='password', name='confirm_password', data-toggle="tooltip", data-placement="bottom")
+                    .form-group
+                        input.btn-primary.btn(value='Register', type='submit')
+                        .btn.btn-link#loginLink Login
+    .col-md-2
+script(src='/js/app/expertRegistration/authenticate.js')
