--- a/views/callFlow/details.jade
+++ b/views/callFlow/details.jade
@@ -8,19 +8,19 @@ include header
         .col-md-8
             h4 Call Details
             .form-horizontal
-                .control-group
+                .form-group
                     .control-label
                         | Duration
                     .controls
                         input(type='text')
-                .control-group
+                .form-group
                     .control-label
                         | Your phone number&nbsp;
                         a.icon-question-sign.tooltips(href='#', data-toggle="tooltip", data-placement="right", title="You'll receive a call on this number for talking to the expert")
                     .controls
                         input(type='text')
                         .btn.btn-primary.btn-mini Verify
-                .control-group
+                .form-group
                     .control-label
                         | Agenda&nbsp;
                         a.icon-question-sign.tooltips(href='#', data-toggle="tooltip", data-placement="right", title="Your questions to the expert. Please be as accurate as possible.")
