--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -8,6 +8,6 @@ doctype 5
                     h3 SearchNTalk Dashboard
                 .pull-right
                     if (logged_in_user)
-                        | Welcome, #{logged_in_user.first_name}
+                        | Hey #{logged_in_user.first_name}
         .col-md-2
 hr
