--- a/views/expertRegistration/complete.jade
+++ b/views/expertRegistration/complete.jade
@@ -30,18 +30,18 @@ include header
                                             input.input-small.timepicker(type='text')
                                             span.add-on
                                                 i.icon-time
-                                .control-group
+                                .form-group
                                     .controls
                                         input.btn.btn-primary(type='submit', value='Save')
                         td
                             .form-horizontal
-                                .control-group
+                                .form-group
                                     .control-label
                                         | Phone Number
                                     .controls
                                         input.col-md-1#countryCode(type='text')
                                         input#mobile(type='text')
-                                .control-group
+                                .form-group
                                     .controls
                                         button.btn-primary.btn(onclick='handleSendVerificationCodeClicked()') Send Verification Code
         .col-md-2
