--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -31,7 +31,7 @@ include scriptsAndStyles
                                 td #{member.revenue_share}%
                                 td #{member.role}
                                 td
-                                    a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=member.user_id == logged_in_user.id ? '/expert/' + member.id + '/profile' : '#editUserModal')
+                                    a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=member.user_id != logged_in_user.id ? '/expert/' + member.id + '/profile' : '#editUserModal')
                                     | &nbsp;
                                     a.remove.fa.fa-times-circle(data-id=member.id, data-toggle='modal', href='#delUserModal', style="color: red")
         .col-md-2
@@ -43,23 +43,25 @@ include scriptsAndStyles
                 .close(data-dismiss='modal', aria-hidden='true') x
                 h4.modal-title Invite Member
             .modal-body
-                form.form-horizontal
-                    .control-group
+                form
+                    .form-group
                         label.control-label(for='email') Email
-                        .controls
-                            input(type='text', placeholder='Email', name='email')
-                    .control-group
+                        input.form-control(type='text', placeholder='Email', name='email')
+                    .form-group
                         label.control-label(for='title') Title
-                        .controls
-                            input(type='text', placeholder='Title', name='title')
-                    .control-group
+                        input.form-control(type='text', placeholder='Title', name='title')
+                    .form-group
                         label.control-label(for='firstName') First Name
-                        .controls
-                            input(type='text', placeholder='First Name', name='first_name')
-                    .control-group
+                        input.form-control(type='text', placeholder='First Name', name='first_name')
+                    .form-group
                         label.control-label(for='lastName') Last Name
-                        .controls
-                            input(type='text', placeholder='Last Name', name='last_name')
+                        input.form-control(type='text', placeholder='Last Name', name='last_name')
+                    .form-group
+                        label.control-label(for='role') Role
+                        select.selectpicker.form-control#role(name='role')
+                            option(value='1') Owner
+                            option(value='2') Admin
+                            option(value='3') Expert
             .modal-footer
                 button.btn.btn-default(data-dismiss='modal') Close
                 button.btn.btn-primary(onclick='handleInviteClicked()') Send Invite
@@ -71,33 +73,31 @@ include scriptsAndStyles
                 .close(data-dismiss='modal', aria-hidden='true') x
                 h4.modal-title Edit User
             .modal-body
-                form.form-horizontal
-                    .control-group
+                form
+                    .form-group
                         label.control-label(for='firstName') First Name
-                        .controls
-                            input(type='text', placeholder='First Name', name='first_name')
-                    .control-group
+                        input.form-control(type='text', placeholder='First Name', name='first_name')
+                    .form-group
                         label.control-label(for='lastName') Last Name
-                        .controls
-                            input(type='text', placeholder='Last Name', name='last_name')
-                    .control-group
+                        input.form-control(type='text', placeholder='Last Name', name='last_name')
+                    .form-group
                         label.control-label(for='revenueShare') Revenue Share
-                        .controls
-                            select(name='revenue_share_unit', style='width: 60px;')
-                                option(value='0') $
-                                option(value='1') Rs.
-                                option(value='2') %
-                            input(type='text', name='revenue_share')
-                    .control-group
+                        .input-group
+                            .input-group-btn
+                                select.selectpicker(data-width='auto')
+                                    option $
+                                    option Rs.
+                                    option %
+                            input.form-control#revenueShare(type='text', name='revenue_share')
+                    .form-group
                         label.control-label(for='role') Role
-                        .controls
-                            select(name='role')
-                                option(value='1') Owner
-                                option(value='2') Admin
-                                option(value='3') Expert
+                        select.selectpicker.form-control#role
+                            option(value='1') Owner
+                            option(value='2') Admin
+                            option(value='3') Expert
             .modal-footer
-                button.btn.btn-default(data-dismiss='modal') Close
-                button.btn.btn-primary(onclick='handleSaveClicked(event)') Save
+                        button.btn.btn-default(data-dismiss='modal') Close
+                        button.btn.btn-primary(onclick='handleSaveClicked(event)') Save
 
 #delUserModal.modal.fade(style='display: none;')
     .modal-dialog
@@ -111,7 +111,10 @@ include scriptsAndStyles
             .modal-footer
                 button.btn.btn-default(data-dismiss='modal') Close
                 button.btn.btn-primary(onclick='handleDeleteClicked(event)') Yes, Disable
-
-
 include footer
-script(src='/javascripts/app/integrationUsers.js')
+
+script.
+    var members = JSON.parse( '!{JSON.stringify(integrationMembers)}' );
+    var integrationId = !{integration.id};
+
+script(src='/js/app/dashboard/integrationUsers.js')
