--- a/views/dashboard/scriptsAndStyles.jade
+++ b/views/dashboard/scriptsAndStyles.jade
@@ -1,10 +1,13 @@
 script(src='/js/lib/jquery.js')
 script(src='/js/lib/jquery.validate.min.js')
+script(src='/js/lib/underscore-min.js')
 script(src='/js/lib/additional-methods.min.js')
 script(src='/js/lib/moment.min.js')
 script(src='/js/lib/bootstrap.min.js')
 script(src='/js/lib/bootbox.min.js')
+script(src='/js/lib/bootstrap-select.min.js')
 
 link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
+link(rel='stylesheet', href='/stylesheets/bootstrap-select.min.css')
 link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
