--- a/views/dashboard/scriptsAndStyles.jade
+++ b/views/dashboard/scriptsAndStyles.jade
@@ -11,3 +11,4 @@ link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-select.min.css')
 link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
+link(rel='stylesheet', href='/stylesheets/style.css')
