--- a/views/expertRegistration/authorize.jade
+++ b/views/expertRegistration/authorize.jade
@@ -7,8 +7,9 @@ include header
         .col-md-8
             label #{integration.title} would like you to join them as an expert.
             label Continue?
-            form(action="/integration/authorize/decision", method="post")
+            form(action="/expert/authorization/decision", method="post")
                 input(name="transaction_id", type="hidden", value="#{transactionID}")
-                input.btn-primary.btn(type="submit", value="Allow", id="allow")
-                input.btn.btn-danger(type="submit", value="Deny", name="cancel", id="cancel")
+                .controls
+                    input.btn-primary.btn(type="submit", value="Allow", id="allow")
+                    input.btn.btn-danger(type="submit", value="Deny", name="cancel", id="cancel")
         .col-md-2
