--- a/views/dashboard/integrations.jade
+++ b/views/dashboard/integrations.jade
@@ -6,23 +6,7 @@ include header
         .col-md-2
         .col-md-8
             h3 Integrations
-            table.table-bordered.table-striped.table#users
-                thead
-                    tr
-                        th First Name
-                        th Last Name
-                        th.col-md-3 Revenue Share
-                        th.col-md-2 Role
-                        th.col-md-1 Actions
-                tbody
-                each member in integrations
-                    tr(data-id=member.id, class=(member.deleted != null ? 'danger' : ''))
-                        td #{member.user[0].first_name}
-                        td #{member.user[0].last_name}
-                        td #{member.revenue_share}
-                        td #{member.role}
-                        td
-                            a.fa.fa-pencil.save(data-id=member.id, data-toggle='modal', href=member.user_id == logged_in_user.id ? '/expert/' + member.id + '/profile' : '#editUserModal')
-                            | &nbsp;
-                            a.remove.fa.fa-times-circle(data-id=member.id, data-toggle='modal', href='#delUserModal', style="color: red")
+            .list-group
+                each member in members
+                    a.list-group-item(href=member.role == 3 ? '/expert/' + member.id + '/profile' : '/integration/' + member.integration_id + '/users') #{member.integration.title}
         .col-md-2
