--- a/views/dashboard/scriptsAndStyles.jade
+++ b/views/dashboard/scriptsAndStyles.jade
@@ -10,5 +10,5 @@ script(src='/js/lib/bootstrap-select.min.js')
 link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-select.min.css')
-link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
+link(rel='stylesheet', href='/stylesheets//font-awesome.css')
 link(rel='stylesheet', href='/stylesheets/style.css')
