Added jade helpers for formatting

--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -18,7 +18,7 @@ include scriptsAndStyles
                     tr
                         th First Name
                         th Last Name
-                        th.col-md-3 Revenue Share
+                        th.col-md-3 Revenue Share / Call
                         th.col-md-1 Role
                         th.col-md-1 Status
                         th.col-md-1 Actions
@@ -27,8 +27,8 @@ include scriptsAndStyles
                     tr(class=((member.deleted == null || member.deleted == 0) ? (member.id != undefined ? '' : 'active') : 'danger'))
                         td #{member.user.first_name}
                         td #{member.user.last_name}
-                        td #{member.revenue_share}
-                        td #{member.role}
+                        td= formatMoney(member.revenue_share, member.revenue_share_unit)
+                        td= formatRole(member.role)
                         td #{member.id != undefined ? 'Active' : 'Invited'}
                         td(style='text-align: center;')
                             if (member.id != undefined && (member.deleted == null || member.deleted == 0))
