--- a/views/callFlow/header.jade
+++ b/views/callFlow/header.jade
@@ -1,11 +1,13 @@
+doctype 5
+meta(name='viewport', content='width=device-width, initial-scale=1')
 .container-fluid
     .row-fluid
         .col-md-2
         .col-md-8
-            .col-md-2
-                img.img-polaroid(src='http://www.geovic.net/userfiles/image/Blank%20Profile(1).png', width=100, height=100)
+            .col-md-2.col-xs-5
+                img.img-polaroid(src='http://www.geovic.net/userfiles/image/Blank%20Profile(1).png', width=80, height=80)
             .left
-                h3 #{user.first_name}&nbsp;#{user.last_name}
+                h3= formatName(user.first_name, user.last_name)
                 label #{user.short_desc}
         .col-md-2
 hr
