--- a/views/callFlow/scriptsAndStyles.jade
+++ b/views/callFlow/scriptsAndStyles.jade
@@ -1,11 +1,14 @@
-script(src='/javascripts/lib/jquery.js')
-script(src='/javascripts/lib/moment.min.js')
-script(src='/javascripts/lib/bootstrap.min.js')
-script(src='/javascripts/lib/bootbox.min.js')
-script(src='/javascripts/lib/bootstrap-timepicker.min.js')
+script(src='/js/lib/jquery.js')
+script(src='/js/lib/jquery.validate.min.js')
+script(src='/js/lib/underscore-min.js')
+script(src='/js/lib/additional-methods.min.js')
+script(src='/js/lib/moment.min.js')
+script(src='/js/lib/bootstrap.min.js')
+script(src='/js/lib/bootbox.min.js')
+script(src='/js/lib/bootstrap-select.min.js')
 
+link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
+link(rel='stylesheet', href='/stylesheets/bootstrap-select.min.css')
+link(rel='stylesheet', href='/stylesheets/font-awesome.css')
 link(rel='stylesheet', href='/stylesheets/style.css')
-link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.min.css')
-link(rel='stylesheet', href='/stylesheets/bootstrap-timepicker.min.css')
-link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
