--- a/views/expertRegistration/header.jade
+++ b/views/expertRegistration/header.jade
@@ -1,3 +1,5 @@
+doctype 5
+meta(name='viewport', content='width=device-width, initial-scale=1')
 .container-fluid
     .row-fluid
         .col-md-2
