--- a/views/expertRegistration/scriptsAndStyles.jade
+++ b/views/expertRegistration/scriptsAndStyles.jade
@@ -6,11 +6,11 @@ script(src='/js/lib/moment.min.js')
 script(src='/js/lib/bootstrap.min.js')
 script(src='/js/lib/bootbox.min.js')
 script(src='/js/lib/bootstrap-select.min.js')
-script(src='/js/lib/bootstrap-datetimepicker.min.js')
+script(src='/js/lib/bootstrap-datepicker.js')
 
 link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-select.min.css')
-link(rel='stylesheet', href='/stylesheets/bootstrap-datetimepicker.min.css')
+link(rel='stylesheet', href='/stylesheets/datepicker.css')
 link(rel='stylesheet', href='/stylesheets/font-awesome.css')
 link(rel='stylesheet', href='/stylesheets/style.css')
